# akapet00.github.io

./: .gitignore  CLAUDE.md  CNAME  LICENSE  README.md  config.toml  confirmation.html  index.html  pyproject.toml  script.js  styles.css
.github/workflows/: deploy.yml
archetypes/: blog.md  project.md
assets/css/: main.css
bibtex/: publications.bib
content/: _index.md  about.md
content/blog/: _index.md  adaptive-neighborhood-point-cloud.md  context-engineering.md  gsoc-2021-brian-simulator.md  hello-world.md  math-rendering-test.md  mcp-vs-skill.md  mcp-vs-vanilla-agent.md  pendulum-inverse-identification-jax.md  qwen3.5-apple-silicon-benchmark.md  ralph-wiggum.md  semantic-scholar-mcp.md  smoothing-splines-normal-estimation.md  surface-area-sphere.md  surface-point-extraction.md
content/projects/: _index.md  algotrading-in-python.md  emf-exposure-analysis.md  normal-estimation.md  point-cloud-central.md  pspd-autodetect.md  sample-project.md
content/publications/: _index.md
layouts/: index.html
layouts/_default/: baseof.html  list.html  single.html  taxonomy.html  terms.html
layouts/_default/_markup/: render-table.html
layouts/blog/: list.html  single.html
layouts/partials/: footer.html  head.html  header.html  post-list-by-year.html  project-links.html  theme-toggle.html
layouts/projects/: list.html  single.html
layouts/publications/: list.html
scripts/: parse_bibtex.py
scripts/qwen3.5-apple-silicon-benchmark/: benchmark.py  plot_results.py
static/devdays2026/: README.md  index.html  references.txt  summary.md
(+5 files in other folders)
